--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.cysharp.unitask": "2.5.4",
     "com.eflatun.scenereference": "4.1.1",
     "com.mygamedevtools.scene-loader": "3.0.0",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
