Adding custom toolbar

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.cysharp.unitask": "2.5.4",
     "com.eflatun.scenereference": "4.1.1",
+    "com.marijnzwemmer.unity-toolbar-extender": "1.4.2",
     "com.mygamedevtools.scene-loader": "3.1.0",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.ide.rider": "3.0.31",
@@ -53,7 +54,8 @@
       "scopes": [
         "com.mygamedevtools.scene-loader",
         "com.cysharp.unitask",
-        "com.eflatun.scenereference"
+        "com.eflatun.scenereference",
+        "com.marijnzwemmer.unity-toolbar-extender"
       ]
     }
   ]
