Clean scene refenrece package and old sound package folder

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "2.5.10",
-    "com.eflatun.scenereference": "4.1.1",
     "com.marijnzwemmer.unity-toolbar-extender": "1.4.2",
     "com.mygamedevtools.scene-loader": "3.1.0",
+    "com.newtonsoft.json": "1.0.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.ide.rider": "3.0.34",
@@ -56,7 +56,8 @@
         "com.mygamedevtools.scene-loader",
         "com.cysharp.unitask",
         "com.eflatun.scenereference",
-        "com.marijnzwemmer.unity-toolbar-extender"
+        "com.marijnzwemmer.unity-toolbar-extender",
+        "com.newtonsoft.json"
       ]
     }
   ]
